--- a/firebase.json
+++ b/firebase.json
@@ -1,5 +1,19 @@
 {
     "firestore": {
         "rules": "backend/firestore.rules"
+    },
+    "hosting": {
+        "public": "app/build/web",
+        "ignore": [
+            "firebase.json",
+            "**/.*",
+            "**/node_modules/**"
+        ],
+        "rewrites": [
+            {
+                "source": "**",
+                "destination": "/index.html"
+            }
+        ]
     }
 }
